--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -11,7 +11,7 @@
     <title>Find a pair</title>
   </head>
   <body>
-    <div id="root" class="h-100"></div>
+    <div id="root" class="h-100"><!--SSR--></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
