--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="root" class="h-100"><!--SSR--></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!--state-->
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
