redux router updated

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find a pair</title>
-  </head>
-  <body>
-    <div id="root" class="h-100"><!--SSR--></div>
-    <!--state-->
-    <script type="module" src="./src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{TODO: Set title :) }</title>
+</head>
+<script>window.initialState = <!--store-data-->;</script>
+<body>
+<div id="root"><!--ssr-outlet--></div>
+<script type="module" src="./src/main.tsx"></script>
+</body>
 </html>
