--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{TODO: Set title :) }</title>
 </head>
-<script>window.initialState = <!--store-data-->;</script>
 <body>
 <div id="root"><!--ssr-outlet--></div>
 <script type="module" src="./src/main.tsx"></script>
+<!--store-data-->
 </body>
 </html>
